--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-slick": "^0.30.3",
     "sass": "^1.83.4"
   },
   "devDependencies": {
+    "@types/react-slick": "^0.23.13",
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
