--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-slick": "^0.30.3",
-    "sass": "^1.83.4"
+    "sass": "^1.83.4",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
