--- a/package.json
+++ b/package.json
@@ -1,42 +1,47 @@
 {
-  "name": "iran-game-center",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@mantine/core": "^7.17.0",
-    "@mantine/hooks": "^7.17.0",
-    "@mobiscroll/react": "npm:@mobiscroll/datepicker-react-next@^5.30.0",
-    "@reduxjs/toolkit": "^2.5.1",
-    "axios": "^1.7.9",
-    "formik": "^2.4.6",
-    "html-react-parser": "^5.2.5",
-    "next": "15.1.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-markdown": "^10.1.0",
-    "react-redux": "^9.2.0",
-    "react-slick": "^0.31.0",
-    "sass": "^1.83.4",
-    "sharp": "^0.33.5"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@types/react-slick": "^0.23.13",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.4",
-    "postcss": "^8.5.3",
-    "postcss-preset-mantine": "^1.17.0",
-    "postcss-simple-vars": "^7.0.1",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+    "name": "iran-game-center",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev --turbopack",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@mantine/core": "^7.17.0",
+        "@mantine/hooks": "^7.17.0",
+        "@mobiscroll/react": "npm:@mobiscroll/react-next-trial@^5.35.0",
+        "@reduxjs/toolkit": "^2.5.1",
+        "axios": "^1.7.9",
+        "formik": "^2.4.6",
+        "html-react-parser": "^5.2.5",
+        "next": "15.1.4",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
+        "react-markdown": "^10.1.0",
+        "react-redux": "^9.2.0",
+        "react-slick": "^0.31.0",
+        "sass": "^1.83.4",
+        "sharp": "^0.33.5",
+        "video.js": "^8.23.4",
+        "videojs-contrib-quality-levels": "^4.1.0",
+        "videojs-hls-quality-selector": "^2.0.0",
+        "videojs-http-source-selector": "^1.1.6"
+    },
+    "devDependencies": {
+        "@eslint/eslintrc": "^3",
+        "@types/node": "^20",
+        "@types/react": "^19",
+        "@types/react-dom": "^19",
+        "@types/react-slick": "^0.23.13",
+        "@types/video.js": "^7.3.58",
+        "eslint": "^9",
+        "eslint-config-next": "15.1.4",
+        "postcss": "^8.5.3",
+        "postcss-preset-mantine": "^1.17.0",
+        "postcss-simple-vars": "^7.0.1",
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5"
+    }
 }
