--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
     "formik": "^2.4.6",
+    "hls.js": "^1.6.13",
     "html-react-parser": "^5.2.5",
+    "lucide-react": "^0.545.0",
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
