--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "@mantine/core": "^7.17.0",
     "@mantine/hooks": "^7.17.0",
-    "@mobiscroll/react": "npm:@mobiscroll/datepicker-react-next@^5.30.0",
     "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
     "formik": "^2.4.6",
@@ -24,6 +23,7 @@
     "react-markdown": "^10.1.0",
     "react-redux": "^9.2.0",
     "react-slick": "^0.31.0",
+    "redux-persist": "^6.0.0",
     "sass": "^1.83.4",
     "sharp": "^0.33.5"
   },
