--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@next/bundle-analyzer": "^16.0.0",
     "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
+    "embla-carousel-react": "^8.6.0",
     "formik": "^2.4.6",
     "hls.js": "^1.6.13",
     "html-react-parser": "^5.2.5",
@@ -26,7 +27,6 @@
     "react-markdown": "^10.1.0",
     "react-multi-date-picker": "^4.5.2",
     "react-redux": "^9.2.0",
-    "react-slick": "^0.31.0",
     "redux-persist": "^6.0.0",
     "sass": "^1.83.4",
     "sharp": "^0.33.5"
@@ -36,7 +36,6 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/react-slick": "^0.23.13",
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
     "postcss": "^8.5.3",
