--- a/package.json
+++ b/package.json
@@ -2,6 +2,17 @@
   "name": "iran-game-center",
   "version": "0.1.0",
   "private": true,
+  "browserslist": {
+    "production": [
+      "last 2 chrome versions",
+      "last 2 firefox versions",
+      "last 2 safari versions",
+      "not IE 11"
+    ],
+    "development": [
+      "last 1 chrome version"
+    ]
+  },
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
